--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
-.App {
-  text-align: center;
+.nav-bar{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.responsive-nav{
+    width: 95%;
+    display: flex;
+    justify-content: space-between;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.logo-container{
+    width: 30%;
+    display: flex;
+    align-items: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+img[alt="logo"]{
+    width: 60px;
+    height: 18px;
 }
 
-.App-link {
-  color: #61dafb;
+p{
+    font-size: 20px;
+    margin-left: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media screen and (min-width:550px){
+    img[alt="logo"]{
+        width: 100px;
+        height: 30px;
+    }
+    p{
+        font-size: 30px;
+        margin-left: 25px;
+    }
+}
+
+
+
+.menu-button{
+    background-color: transparent;
+    outline: none;
+    border: none;
+    cursor: pointer;
+}
+
+.menu-logo{
+    height: 25px;
+    width: 25px;
 }
